# clifford

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: clifford.hpp  cliford.hpp
src/: clifford.cpp  cliford.cpp  cliford.hpp  utils.hpp
